<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.GithubLoginFragment">

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="70dp"
    android:text="@string/signin_with_github"
    android:textSize="25sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/githubAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:layout_marginTop="30dp"
    android:ems="10"
    android:hint="Enter Github Address..."
    android:inputType="textEmailAddress"
    android:minHeight="48dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView"
    android:autofillHints=""
    tools:ignore="HardcodedText,VisualLintTextFieldSize" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="180dp"
    android:layout_height="141dp"
    android:layout_marginTop="20dp"
    android:src="@mipmap/github_logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    android:contentDescription="@string/todo" />

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/githubLoginButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/button"
    app:layout_constraintEnd_toEndOf="@+id/githubAddress"
    app:layout_constraintStart_toStartOf="@+id/githubAddress"
    app:layout_constraintTop_toBottomOf="@+id/githubAddress"
    tools:ignore="UnknownId" />
</androidx.constraintlayout.widget.ConstraintLayout>